--- a/index.html
+++ b/index.html
@@ -17,12 +17,33 @@
                <button class="banner-buttion">Explore New Bangladesh</button>
             </div>
             <img class="banner-profile-pic" src="assets/hero.png" alt="">
-
         </div>
-
     </header>
     <main>
-
+        <section class="visions">
+        <h3 class="section-title">The Vision of Future</h3>
+        <p class="section-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+         <div class="visions-container">
+           <div class="vision1">
+            <img src="assets/card-icon.png" alt="">
+            <h4 class="vision-title">Digital Transformation</h4>
+            <p class="vision-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+            <button class="btn1">Learn More</button>
+           </div> 
+           <div class="vision2">
+            <img src="assets/card-icon.png" alt="">
+            <h4 class="vision-title">Green Energy</h4>
+            <p class="vision-description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+            <button class="btn2">Learn More</button>
+           </div>
+           <div class="vision3">
+            <img src="assets/card-icon.png" alt="">
+            <h4 class="vision-title">Modern Infrastructure</h4>
+            <p class="vision-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+            <button class="btn3">Learn More</button>
+           </div>
+         </div>
+    </section>
     </main>
     <footer>
 
